--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -72,24 +72,7 @@
     </div>
 
     <!-- Login -->
-    <div id="logindiv" class="modal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h2 class="modal-title">Log In</h2>
-            <img class="float-end" src="{{ url_for('static', filename='images/capstone_logo_path.svg') }}" width="200px">
-          </div>
-          <div class="modal-body">
-              <label for="username">Username</label>
-              <input class="form-control" type="text" id="username">
-              <label for="Password">Password</label>
-              <input class="form-control" type="password" id="password">
-              <button id="login" type="button" class="form-control btn btn-primary mt-2">Log In</button>
-
-          </div>
-        </div>
-      </div>
-    </div>
+    {% block modals %}{% endblock %}
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
