--- a/www/templates/alljobs.html
+++ b/www/templates/alljobs.html
@@ -37,19 +37,19 @@
   <div class="row">
     <div class="col-md-4">
       <div style="width: 100%;">
-        <canvas id="usercpuchart"></canvas>
+        <canvas id="usercpuchart" style="width: 100%; height: 30em"></canvas>
       </div>
     </div>
 
     <div class="col-md-4">
       <div style="width: 100%;">
-        <canvas id="usermemchart"></canvas>
+        <canvas id="usermemchart" style="width: 100%; height: 30em"></canvas>
       </div>
     </div>
 
     <div class="col-md-4">
       <div style="width: 100%;">
-        <canvas id="userfailchart"></canvas>
+        <canvas id="userfailchart" style="width: 100%; height: 30em"></canvas>
       </div>
     </div>
 
@@ -105,17 +105,17 @@ new Chart("jobchart", {
   type: "doughnut",
   data: jobdata,
   options: {
-    devicePixelRatio: 4,
     plugins: {
       legend: {
-        display: true
+        display: true,
+        labels :{
+          font: {
+            size: 20
+          }
+        }
       },
       title: {
-        display: false,
-        text: "Job Summary Last Month",
-        font: {
-          size: 20
-        }
+        display: false
       }
     }
   }
@@ -139,7 +139,6 @@ new Chart("memchart", {
   type: "line",
   data: memdata,
   options: {
-    devicePixelRatio: 4,
     plugins: {
       legend: {
         display: false
@@ -156,10 +155,23 @@ new Chart("memchart", {
       y: {
         title: {
           display: true,
-          text: "Memory GBH"
+          text: "Memory GBH",
+          font: {
+            size: 16
+          }
         },
         ticks: {
-          beginAtZero: true
+          beginAtZero: true,
+          font: {
+            size: 16
+          }
+        }
+      },
+      x: {
+        ticks: {
+          font: {
+            size: 16
+          }
         }
       }
     }
@@ -183,7 +195,6 @@ new Chart("cpuchart", {
   type: "line",
   data: cpudata,
   options: {
-    devicePixelRatio: 4,
     plugins: {
       legend: {
         display: false
@@ -200,10 +211,23 @@ new Chart("cpuchart", {
       y: {
         title: {
           display: true,
-          text: "CPU Hours"
+          text: "CPU Hours",
+          font: {
+            size: 16
+          }
         },
         ticks: {
-          beginAtZero: true
+          beginAtZero: true,
+          font: {
+            size: 16
+          }
+        }
+      },
+      x: {
+        ticks: {
+          font: {
+            size: 16
+          }
         }
       }
     }
@@ -227,7 +251,6 @@ new Chart("usermemchart", {
   type: "bar",
   data: user_mem_usage,
   options: {
-    devicePixelRatio: 4,
     plugins: {
       legend: {
         display: false
@@ -245,10 +268,23 @@ new Chart("usermemchart", {
       x: {
         title: {
           display: true,
-          text: "Memory GBH"
+          text: "Memory GBH",
+          font: {
+            size: 16
+          }
         },
         ticks: {
-          beginAtZero: true
+          beginAtZero: true,
+          font: {
+            size: 16
+          }
+        }
+      },
+      y: {
+        ticks: {
+          font: {
+            size: 20
+          }
         }
       }
     }
@@ -272,7 +308,6 @@ new Chart("userfailchart", {
   type: "bar",
   data: user_fail_usage,
   options: {
-    devicePixelRatio: 4,
     plugins: {
       legend: {
         display: false
@@ -290,10 +325,23 @@ new Chart("userfailchart", {
       x: {
         title: {
           display: true,
-          text: "Failed Jobs"
+          text: "Failed Jobs",
+          font: {
+            size: 16
+          }
         },
         ticks: {
-          beginAtZero: true
+          beginAtZero: true,
+          font: {
+            size: 16
+          }
+        }
+      },
+      y: {
+        ticks: {
+          font: {
+            size: 20
+          }
         }
       }
     }
@@ -318,10 +366,12 @@ new Chart("usercpuchart", {
   type: "bar",
   data: user_cpu_hours,
   options: {
-    devicePixelRatio: 4,
     plugins: {
       legend: {
-        display: false
+        display: false,
+        font: {
+          size: 16
+        }
       },
       title: {
         display: true,
@@ -336,10 +386,23 @@ new Chart("usercpuchart", {
       x: {
         title: {
           display: true,
-          text: "CPU Hours"
+          text: "CPU Hours",
+          font: {
+            size: 16
+          }
         },
         ticks: {
-          beginAtZero: true
+          beginAtZero: true,
+          font: {
+            size: 16
+          }
+        }
+      },
+      y: {
+        ticks: {
+          font: {
+            size: 20
+          }
         }
       }
     }
