Added missing name to templates

--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -34,7 +34,7 @@
                     <button class="btn btn-danger" id="logout">Log Out</button>
                   </li>
                   <li class="nav-item">
-                    <h4 id="loginname">[Name] logged in</h4>
+                    <h4 id="loginname">{{ name }}</h4>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('index') }}">Home</a>
