Added better link in footer

--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -66,7 +66,7 @@
         {% block content %}{% endblock %}
         <div id="footer" class="row">
           <div class="col-md-12">
-            Please report any problems to our bug database
+            Please report any problems to <a href="mailto:babraham.bioinformatics@babraham.ac.uk?subject=Cluster Monitor Feedback">bioinformatics</a>
           </div>
         </div>
     </div>
