--- a/www/templates/alljobs.html
+++ b/www/templates/alljobs.html
@@ -3,12 +3,11 @@
 
 <div class="container-fluid">
 
-  <h2>All Jobs over last month</h2>
-  
+
   <div class="row">
-  
-    <div class="col-md-6">
-      <table class="table">
+    <div class="col-md-6">  
+      <h2>All Jobs over last month</h2>
+        <table class="table">
         <tbody>
           <tr>
             <th>Total Jobs</th>
@@ -28,10 +27,9 @@
     <div class="col-md-2"></div>
     <div class="col-md-4">
       <div style="width: 100%;" class="pt-1">
-        <canvas id="jobchart"></canvas>
+        <canvas id="jobchart" style="width: 100%;"></canvas>
       </div>
     </div>
-
   </div>
 
   <div class="row">
