--- a/www/templates/alljobs.html
+++ b/www/templates/alljobs.html
@@ -153,7 +153,7 @@ new Chart("memchart", {
       y: {
         title: {
           display: true,
-          text: "Memory GBH",
+          text: "Memory GBkH",
           font: {
             size: 16
           }
@@ -266,7 +266,7 @@ new Chart("usermemchart", {
       x: {
         title: {
           display: true,
-          text: "Memory GBH",
+          text: "Memory GBkH",
           font: {
             size: 16
           }
@@ -281,7 +281,7 @@ new Chart("usermemchart", {
       y: {
         ticks: {
           font: {
-            size: 20
+            size: 16
           }
         }
       }
@@ -338,7 +338,7 @@ new Chart("userfailchart", {
       y: {
         ticks: {
           font: {
-            size: 20
+            size: 16
           }
         }
       }
@@ -399,7 +399,7 @@ new Chart("usercpuchart", {
       y: {
         ticks: {
           font: {
-            size: 20
+            size: 16
           }
         }
       }
