--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -14,6 +14,14 @@
 {% block content %}
 <div class="container-fluid" class="text-center">
   
+  <div class="alert alert-primary d-flex align-items-center alert-dismissible fade show" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:"><use xlink:href="#info-fill"/></svg>
+    <div>
+      Watch our cluster <a href="https://vimeo.com/user/132030108/folder/21518400" target="_videos">howto videos</a>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  </div>
+
   {% for alert in alerts %}
   <div class="alert alert-danger d-flex align-items-center" role="alert">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
