--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -48,6 +48,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('jobs') }}">Jobs</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('programs') }}">Programs</a>
+                  </li>
                   {% if isadmin %}
                   <li class="nav-item">
                     <a class="admin-nav-link nav-link" href="{{ url_for('allstorage') }}">AllStorage</a>
