Make starting stopping rstudio work properly

--- a/www/templates/programs.html
+++ b/www/templates/programs.html
@@ -11,9 +11,20 @@
     <div class="col-md-4 my-auto text-center">
       <h2 id="rstudio_state">{% if rstudio_running %}Rstudio is running{% else %}Rstudio inactive{% endif %}</h2>
     </div>
-    <div class="col-md-4 my-auto">
-      <a href="{{ url_for('launch_program', program='rstudio') }}" target="_rstudio" class="btn btn-primary btn-lg">Launch RStudio</a>
-      {% if rstudio_running %}<a href="{{ url_for('stop_program', program='rstudio') }}" class="btn btn-danger btn-lg">Stop RStudio</a>{% endif %}
+    <div class="col-md-2 my-auto">
+      {% if rstudio_running %}
+      <a href="{{ url_for('launch_program', program='rstudio') }}" target="_rstudio" class="btn btn-primary btn-lg">Open RStudio</a>
+      {% else %}
+      <button id="startrstudio" class="btn btn-primary btn-lg">Start RStudio</a>
+      {% endif %}
+    </div>
+      <div class="col-md-2 my-auto">
+      {% if rstudio_running %}
+      <a href="{{ url_for('stop_program', program='rstudio') }}" class="btn btn-danger btn-lg needsrefresh">Stop RStudio</a>
+      {% else %}
+      <label for="rstudiomemory" class="form-label">Use <span id="selectedrstudiomemory">20</span> GB Memory</label>
+      <input type="range" class="form-range" id="rstudiomemory" min="10" max="80" step="1" value="20">
+      {% endif %}
     </div>
   </div>
 
@@ -22,3 +33,8 @@
 
 {% endblock %}
 
+{% block js %}
+
+<script src="{{ url_for('static', filename='js/programs.js') }}"></script>
+
+{% endblock %}
