--- a/www/templates/programs.html
+++ b/www/templates/programs.html
@@ -4,11 +4,11 @@
 <div class="container-fluid">
 
 
-  <div class="row">
-    <div class="col-md-3">
+  <div class="row mb-5">
+    <div class="col-md-4">
       <img width="100%" src="{{ url_for('static', filename='images/programs/rstudio.png') }}">
     </div>
-    <div class="col-md-3 my-auto text-center">
+    <div class="col-md-2 my-auto text-center">
       <h2 id="rstudio_state">{% if rstudio_running %}Running{% else %}Inactive{% endif %}</h2>
     </div>
     <div class="col-md-3 my-auto">
@@ -28,11 +28,11 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-3 my-auto">
+  <div class="row mb-5">
+    <div class="col-md-4 my-auto">
       <img width="100%" src="{{ url_for('static', filename='images/programs/jupyterlab.svg') }}">
     </div>
-    <div class="col-md-3 my-auto text-center">
+    <div class="col-md-2 my-auto text-center">
       <h2 id="jupyterlab_state">{% if jupyterlab_running %}Running{% else %}Inactive{% endif %}</h2>
     </div>
     <div class="col-md-3 my-auto">
@@ -53,11 +53,11 @@
   </div>
 
 
-  <div class="row">
-    <div class="col-md-3 my-auto">
+  <div class="row mb-5">
+    <div class="col-md-4 my-auto">
       <img width="100%" src="{{ url_for('static', filename='images/programs/filebrowser.svg') }}">
     </div>
-    <div class="col-md-3 my-auto text-center">
+    <div class="col-md-2 my-auto text-center">
       <h2 id="jupyterlab_state">{% if filebrowser_running %}Running{% else %}Inactive{% endif %}</h2>
     </div>
     <div class="col-md-3 my-auto">
