--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -31,13 +31,13 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <button class="btn btn-danger" id="logout">Log Out</button>
-                  </li>
-                  <li class="nav-item">
-                    <h4 id="loginname">{{ name }}</h4>
+                    <button class="btn btn-danger" id="logout">Logout<br><span id="loginname">{{ name }}</span></button>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="https://s-andrews.github.io/capstone_docs/" target="_help">Help</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('storage') }}">Storage</a>
